--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQz5PQpt8fn_hrie2m3NUYGXoDjtqwn8wWwzQ&usqp=CAU" alt="Logo" width="150">
+        <img src="https://i.postimg.cc/63M3zFvd/Money-ia-removebg-preview.png" alt="Logo" width="200">
     </div>
 
 
