--- a/index.html
+++ b/index.html
@@ -67,16 +67,12 @@
 <body>
     <div class="logo">
         <img src="https://i.postimg.cc/63M3zFvd/Money-ia-removebg-preview.png" alt="Logo" width="200">
+    </div>" alt="Logo" width="150">
     </div>
 
 
     <h1>MoneyIA roleta </h1>
     <select id="roleta-select" onchange="atualizarRoletaSelecionada()">
-        <option value="roleta-Turksh-roluette">Mega Stake</option>
-        <option value="roleta-Turksh-roluette">lightning Stake</option>
-        <option value="roleta-Turksh-roluette">Xxx lightning Stake</option>  
-        <option value="roleta-Turksh-roluette">Imersive Stake</option>
-        <option value="roleta-Turksh-roluette">Power up Stake</option>
         <option value="roleta-Turksh-roluette">Turksh Executiva bet</option>
         <option value="mega-roleta">Mega auto Executiva bet</option>
         <option value="roleta-relampago">Diamond Executiva bet</option>
@@ -185,7 +181,7 @@
                 botaoCompartilhar.onclick = function() {
                     var entradaTexto = this.getAttribute("data-entrada");
                     // Adicione a mensagem específica e o link de cadastro
-                    var mensagemCompartilhamento = "confirmado✅ " + entradaTexto + "\nCadastre-se aqui: https://exclusiva.bet/cadastro?afiliado=14725836
+                    var mensagemCompartilhamento = "confirmado✅ " + entradaTexto + "\nCadastre-se aqui: https://exclusiva.bet/cadastro?afiliado=14725836";
                     if (navigator.share) {
                         navigator.share({
                             title: "Resultado da IA Roleta",
