--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
             margin-bottom: 10px;
         }
     </style>
+<style>
+    .redes-sociais img {
+        width: 40px;
+        height: auto;
+        margin: 5px;
+    }
+</style>
 </head>
 <body>
     <div class="logo">
@@ -210,4 +217,15 @@
     }
     alertaEntradaAleatorio();
     </script>
+<div class="redes-sociais">
+    
+    <a href="https://t.me/moneyiaoficial" target="_blank">
+        <img src="https://i.postimg.cc/0jMzjxtV/telegrama.png" alt="Telegram">
+    </a>
+    <a href="https://www.youtube.com/channel/UC39TmNBpx7PEpBowlh3MODg" target="_blank">
+        <img src="https://i.postimg.cc/Hk4t4DmS/youtube.png" alt="YouTube">
+    </a>
+    <!-- Adicione outros ícones para diferentes redes sociais da mesma maneira -->
+</div>
+
    
