--- a/index.html
+++ b/index.html
@@ -227,5 +227,13 @@
     </a>
     <!-- Adicione outros ícones para diferentes redes sociais da mesma maneira -->
 </div>
+<div class="doacao">
+    <h2>Doação via Pix</h2>
+    <p>Você pode apoiar nosso trabalho fazendo uma doação via Pix:</p>
+    <a href="https://link.mercadopago.com.br/moneyiadoacao">
+        <button>Faça sua doação via Pix</button>
+    </a>
+</div>
+
 
    
