--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <option value="roleta-espanhola">Ruby Executiva bet</option>
         <option value="roleta-Romenia">Azure Executiva bet</option>
         <option value="roleta-vip-diamante">Espanhol Executiva bet</option>
-        <option value="mega-roleta">Mega Estrela bet</option>
+       
        <!-- Adicione outras opções de roleta aqui... -->
     </select>
     <div class="botoes">
@@ -193,8 +193,11 @@
     }
     alertaEntradaAleatorio();
     </script>
-<div class="redes-sociais">
-    
+<div class="redes-sociais">  
+    <a href="https://www.tiktok.com/@moneyiaoficial" target="_blank">
+    <img src="https://i.postimg.cc/4d4N0crC/tik-tok.png" alt="TikTok">
+</a>
+
     <a href="https://t.me/moneyiaoficial" target="_blank">
         <img src="https://i.postimg.cc/0jMzjxtV/telegrama.png" alt="Telegram">
     </a>
