--- a/index.html
+++ b/index.html
@@ -193,19 +193,21 @@
     }
     alertaEntradaAleatorio();
     </script>
-<div class="redes-sociais">  
+<div class="redes-sociais">
     <a href="https://www.tiktok.com/@moneyiaoficial" target="_blank">
-    <img src="https://i.postimg.cc/4d4N0crC/tik-tok.png" alt="TikTok">
-</a>
+        <img src="https://i.postimg.cc/4d4N0crC/tik-tok.png" alt="TikTok" style="margin-right: 30px;">
+    </a>
 
     <a href="https://t.me/moneyiaoficial" target="_blank">
-        <img src="https://i.postimg.cc/0jMzjxtV/telegrama.png" alt="Telegram">
+        <img src="https://i.postimg.cc/0jMzjxtV/telegrama.png" alt="Telegram" style="margin-right: 30px;">
     </a>
+
     <a href="https://www.youtube.com/channel/UC39TmNBpx7PEpBowlh3MODg" target="_blank">
-        <img src="https://i.postimg.cc/Hk4t4DmS/youtube.png" alt="YouTube">
+        <img src="https://i.postimg.cc/Hk4t4DmS/youtube.png" alt="YouTube" style="margin-right: 20px;">
     </a>
     <!-- Adicione outros ícones para diferentes redes sociais da mesma maneira -->
 </div>
+
 <div class="doacao">
     <h2>Doação via Pix</h2>
     <p>Você pode apoiar nosso trabalho fazendo uma doação via Pix:</p>
