--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
     <h1>MoneyIA roleta </h1>
     <select id="roleta-select" onchange="atualizarRoletaSelecionada()">
         <option value="roleta-Turksh-roluette">Turksh Executiva bet</option>
+        <option value="roleta-Relampago-roluette"> Relampago Executiva bet</option>
+        <option value="roleta-Xtreme-roluette"> Xtreme Executiva bet</option>
+        <option value="roleta-Brasilian-roluette"> Brasilian Executiva bet</option>
+        <option value="roleta-Power Up-roluette"> Power Up Executiva bet</option>
         <option value="mega-roleta">Mega auto Executiva bet</option>
         <option value="roleta-relampago">Diamond Executiva bet</option>
         <option value="roleta-lobby">Ez dealer Executiva bet</option>
