--- a/index.html
+++ b/index.html
@@ -1,225 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>IA roleta 3.0</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gerenciamento de Banca em Juros Compostos</title>
     <style>
         body {
+            background-color: #121212;
+            color: #ffffff;
             font-family: Arial, sans-serif;
-            background-color: black;
-            color: white;
-            text-align: center;
-            padding: 50px;
         }
-        #entrada {
-            font-size: 24px;
-            margin-top: 20px;
-            display: none;
+        h2 {
+            color: #ffd700;
         }
-        #mensagem {
-            color: yellow;
-            font-size: 18px;
+        form {
+            background-color: #1e1e1e;
+            padding: 20px;
+            border-radius: 8px;
+            margin-bottom: 20px;
         }
-        #obter-entrada {
-            background-color: green;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-        #roleta-select {
-            color: white;
-            background-color: #333;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        .logo {
-            margin-top: -60px;
-        }
-        .botoes {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 10px;
-        }
-        #botao-cadastrar {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: #333;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        /* Ajuste o posicionamento dos botões */
-        #botao-cadastrar {
+        label {
+            display: block;
             margin-bottom: 10px;
         }
+        input[type="number"] {
+            width: 100%;
+            padding: 10px;
+            border-: 4px;
+            border: 1px solid #333333;
+            background-color: #333333;
+            color: #ffffff;
+            margin-bottom: 10px;
+        }
+        button[type="submit"] {
+            background-color: #ffd700;
+            color: #121212;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button[type="submit"]:hover {
+            background-color: #ffdf80;
+        }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #333333;
+            text-align: left;
+            padding: 8px;
+        }
+        th {
+            background-color: #333333;
+            color: #ffd700;
+        }
     </style>
-<style>
-    .redes-sociais img {
-        width: 40px;
-        height: auto;
-        margin: 5px;
-    }
-</style>
 </head>
 <body>
-    <div class="logo">
-    <img src="https://i.postimg.cc/63M3zFvd/Money-ia-removebg-preview.png" alt="Logo" width="200">
-    </div>
-<div class="doacao">
-    <h2>Doação via Pix</h2>
-    <p>Você pode apoiar nosso trabalho fazendo uma doação via Pix:</p>
-    <a href="https://link.mercadopago.com.br/moneyiadoacao">
-        <button>Faça sua doação via Pix</button>
-    </a>
-</div>
+    <h2>Planilha de Banca Money IA</h2>
+    <form id="calcForm">
+        <label for="initialBalance">Saldo Inicial:</label>
+        <input type="number" id="initialBalance" name="initialBalance" required>
+        <label for="interestRate">% porcentagem :</label>
+        <input type="number" id="interestRate" name="interestRate" step="0.01" required>
+        <label for="entries">Número de Entradas:</label>
+        <input type="number" id="entries" name="entries" required>
+        <button type="submit">Calcular</button>
+    </form>
+    <div id="result"></div>
 
-
-    <h1>MoneyIA roleta </h1>
-    <select id="roleta-select" onchange="atualizarRoletaSelecionada()">
-        <option value="roleta-Turksh-roluette">Turksh Executiva bet</option>
-        <option value="roleta-Relampago-roluette"> Relampago Executiva bet</option>
-        <option value="roleta-Xtreme-roluette"> Xtreme Executiva bet</option>
-        <option value="roleta-Brasilian-roluette"> Brasilian Executiva bet</option>
-        <option value="roleta-Power Up-roluette"> Power Up Executiva bet</option>
-        <option value="mega-roleta">Mega auto Executiva bet</option>
-        <option value="roleta-relampago">Diamond Executiva bet</option>
-        <option value="roleta-lobby">Ez dealer Executiva bet</option>
-        <option value="roleta-imersiva">Italia Executiva bet</option>
-        <option value="roleta-rapida">Neon Executiva bet</option>
-        <option value="roleta-vip">Namaste Executiva bet</option>
-        <option value="roleta-espanhola">Ruby Executiva bet</option>
-        <option value="roleta-Romenia">Azure Executiva bet</option>
-        <option value="roleta-vip-diamante">Espanhol Executiva bet</option>
-       
-       <!-- Adicione outras opções de roleta aqui... -->
-    </select>
-    <div class="botoes">
-        <input type="password" id="senha" placeholder="Senha de acesso">
-        <button id="obter-entrada" onclick="verificarSenha()">Obter Entrada</button>
-        <p id="mensagem"></p>
-    </div>
-    <iframe src="https://exclusiva.bet/cadastro?afiliado=14725836" width="100%" height="600" frameborder="0"></iframe>
-
-    <p id="entrada"></p>
-    <div class="botoes">
-    <div id="historico" style="margin-top: 20px;">
-        <h2>Histórico de Entradas</h2>
-        <ul id="lista-entradas"></ul>
-        <button onclick="limparHistorico()">Limpar Histórico</button>
-    </div>
-    <!-- Script JavaScript... -->
     <script>
-        var historicoEntradas = [];
-        var roletaSelecionada = ""; // Variável para armazenar a roleta selecionada
-
-        function atualizarRoletaSelecionada() {
-            var select = document.getElementById("roleta-select");
-            roletaSelecionada = select.options[select.selectedIndex].text;
-        }
-
-        function verificarSenha() {
-            var senhaInserida = document.getElementById("senha").value;
-            var senhasAceitas = ["123456", "14725836", "97432345"];
-            if (senhasAceitas.includes(senhaInserida)) {
-                document.getElementById("mensagem").textContent = "Obtendo entrada...";
-                setTimeout(function() {
-                    document.getElementById("mensagem").textContent = "";
-                    document.getElementById("entrada").style.display = "block";
-                    setTimeout(function() {
-                        var entrada = Math.floor(Math.random() * 35) + 1;
-                        var resultadoAleatorio = Math.floor(Math.random() * 3);
-                        var mensagemResultado = "";
-                        if (resultadoAleatorio === 0) {
-                            mensagemResultado = "🎯Entrar coluna 1 e 2🎯";
-                        } else if (resultadoAleatorio === 1) {
-                            mensagemResultado = "🎯Entrar coluna 2 e 3🎯";
-                        } else {
-                            mensagemResultado = "🎯Entrar coluna 1 e 3🎯";
-                        }
-                        document.getElementById("entrada").innerHTML = "Entra: " + entrada + "Vizinhos <br>" + mensagemResultado;
-                        document.getElementById("mensagem").textContent = "";
-                        historicoEntradas.push("Entrada: " + entrada + " - " + mensagemResultado + " na roleta " + roletaSelecionada); // Inclui o nome da roleta
-                        atualizarHistorico();
-                    }, 1000);
-                    setTimeout(function() {
-                        document.getElementById("entrada").style.display = "none";
-                    }, 10000);
-                }, 5000);
-            } else {
-                document.getElementById("mensagem").textContent = "Senha incorreta. Tente novamente.";
+        document.getElementById("calcForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            var initialBalance = parseFloat(document.getElementById("initialBalance").value);
+            var interestRate = parseFloat(document.getElementById("interestRate").value);
+            var entries = parseInt(document.getElementById("entries").value);
+            var tableContent = "<table><tr><th>Dia</th><th>Saldo</th><th>Valor a ser Feito (por entrada)</th></tr>";
+            var balance = initialBalance;
+            var totalInterest = 0;
+            var dailyInterest = balance * (interestRate / 100) / entries;
+            for (var i = 1; i <= entries; i++) {
+                balance += dailyInterest;
+                totalInterest += dailyInterest;
+                tableContent += "<tr><td>" + i + "</td><td>" + balance.toFixed(2) + "</td><td>" + dailyInterest.toFixed(2) + "</td></tr>";
             }
-        }
-
-        function atualizarHistorico() {
-            var listaEntradas = document.getElementById("lista-entradas");
-            listaEntradas.innerHTML = "";
-            for (var i = 0; i < historicoEntradas.length; i++) {
-                var entradaItem = document.createElement("li");
-                entradaItem.textContent = historicoEntradas[i];
-                // Adicione um botão "Compartilhar Resultado" para cada entrada
-                var botaoCompartilhar = document.createElement("button");
-                botaoCompartilhar.textContent = "Compartilhar";
-                // Armazene o texto da entrada no atributo data-entrada
-                botaoCompartilhar.setAttribute("data-entrada", historicoEntradas[i]);
-                botaoCompartilhar.onclick = function() {
-                    var entradaTexto = this.getAttribute("data-entrada");
-                    // Adicione a mensagem específica e o link de cadastro
-                    var mensagemCompartilhamento = "confirmado✅ " + entradaTexto + "\nCadastre-se aqui: https://exclusiva.bet/cadastro?afiliado=14725836";
-                    if (navigator.share) {
-                        navigator.share({
-                            title: "Resultado da IA Roleta",
-                            text: mensagemCompartilhamento,
-                        }).then(function() {
-                            console.log("Resultado compartilhado com sucesso!");
-                        }).catch(function(error) {
-                            console.error("Erro ao compartilhar resultado:", error);
-                        });
-                    } else {
-                        alert("Seu navegador não suporta a função de compartilhamento");
-                    }
-                };
-                entradaItem.appendChild(botaoCompartilhar);
-                listaEntradas.appendChild(entradaItem);}}
-      function limparHistorico() {
-        historicoEntradas = [];
-        atualizarHistorico();
-    }
-
-    function alertaEntradaAleatorio() {
-        var tempoAleatorio = Math.floor(Math.random() * (100000 - 20000)) + 120000;
-        setTimeout(function() {
-            alert("Possível entrada! Verifique a roleta.");
-            alertaEntradaAleatorio();
-        }, tempoAleatorio);
-    }
-    alertaEntradaAleatorio();
+            tableContent += "<tr><td colspan='2'><strong>Valor de Juros Compostos:</strong></td><td>" + totalInterest.toFixed(2) + "</td></tr>";
+            tableContent += "</table>";
+            document.getElementById("result").innerHTML = tableContent;
+        });
     </script>
-<div class="redes-sociais">
-    <a href="https://www.tiktok.com/@moneyiaoficial" target="_blank">
-        <img src="https://i.postimg.cc/4d4N0crC/tik-tok.png" alt="TikTok" style="margin-right: 30px;">
-    </a>
-
-    <a href="https://t.me/moneyiaoficial" target="_blank">
-        <img src="https://i.postimg.cc/0jMzjxtV/telegrama.png" alt="Telegram" style="margin-right: 30px;">
-    </a>
-
-    <a href="https://www.youtube.com/channel/UC39TmNBpx7PEpBowlh3MODg" target="_blank">
-        <img src="https://i.postimg.cc/Hk4t4DmS/youtube.png" alt="YouTube" style="margin-right: 20px;">
-    </a>
-    <!-- Adicione outros ícones para diferentes redes sociais da mesma maneira -->
-</div>
-
-
-
-
-   
+</body>
+</html>
