--- a/index.html
+++ b/index.html
@@ -57,9 +57,15 @@
             background-color: #333333;
             color: #ffd700;
         }
+        .logo {
+            display: block;
+            margin: 20px auto;
+            max-width: 200px;
+        }
     </style>
 </head>
 <body>
+    <img src="https://imgbb.host/images/QtWhB.png" alt="Logo da sua empresa" class="logo">
     <h2>Planilha de Banca Money IA</h2>
     <form id="calcForm">
         <label for="initialBalance">Saldo Inicial:</label>
