--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             margin: 20px auto;
             max-width: 200px;
         }
+        .separator {
+            background-color: #ffd700;
+        }
     </style>
 </head>
 <body>
@@ -70,10 +73,10 @@
     <form id="calcForm">
         <label for="initialBalance">Saldo Inicial:</label>
         <input type="number" id="initialBalance" name="initialBalance" required>
-        <label for="interestRate">% porcentagem :</label>
+        <label for="interestRate">% Porcentagem mensal :</label>
         <input type="number" id="interestRate" name="interestRate" step="0.01" required>
-        <label for="entries">Número de Entradas:</label>
-        <input type="number" id="entries" name="entries" required>
+        <label for="entries">Número de (dias):</label>
+        <input type="number" id="entries" name="entries" value="30" required>
         <button type="submit">Calcular</button>
     </form>
     <div id="result"></div>
@@ -88,11 +91,21 @@
             var balance = initialBalance;
             var totalInterest = 0;
             var dailyInterest = balance * (interestRate / 100) / entries;
+
+            // Divide o valor a ser feito por entrada em 4 partes
+            var dailyInterestPerPart = dailyInterest / 4;
+
             for (var i = 1; i <= entries; i++) {
                 balance += dailyInterest;
                 totalInterest += dailyInterest;
-                tableContent += "<tr><td>" + i + "</td><td>" + balance.toFixed(2) + "</td><td>" + dailyInterest.toFixed(2) + "</td></tr>";
+
+                // Verifica se é o início de um novo dia
+                if (i % 4 === 1 && i !== 1) {
+                    tableContent += "<tr class='separator'><td></td><td></td><td></td></tr>"; // Adiciona linha de separação
+                }
+                tableContent += "<tr><td>" + i + "</td><td>" + balance.toFixed(2) + "</td><td>" + dailyInterestPerPart.toFixed(2) + "</td></tr>";
             }
+
             tableContent += "<tr><td colspan='2'><strong>Valor de Juros Compostos:</strong></td><td>" + totalInterest.toFixed(2) + "</td></tr>";
             tableContent += "</table>";
             document.getElementById("result").innerHTML = tableContent;
